app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }


  html {
    @apply scroll-smooth transition-all duration-300;
    scroll-behavior: smooth;
    scrollbar-width: none;
  }

  ::-webkit-scrollbar {
    display: none;
  }

  ::scrollbar {
    display: none;
  }

  ::-webkit-scrollbar {
    display: none;
  }

  body {
    @apply bg-background text-foreground overflow-x-hidden
  }

  .hero-mask {
    /* border-radius: 73% 63% 43% 60% / 81% 78% 53% 56%; */
    mask: url('/mask.svg') no-repeat top center / cover;
    mask-position: center 80%;
    background: linear-gradient(360deg, rgba(68, 255, 239, 0.549) 2%, rgba(255, 255, 255, 0))
  }

  .hero-mask-normal {
    border-radius: 73% 63% 43% 60% / 81% 78% 53% 56%;
  }

  .nav_mask {
    clip-path: ellipse(150px 450px at 20% 50%);
  }

  .gray-transition {
    transition: grayscale 1s;
  }

  .text-shadow {
    text-shadow: 0 0 15px rgba(0, 128, 128, 0.677);
  }
}

